objects/advpm__History__c.object
<CustomObject>
    <fields>
        <fullName>advpm__AM_PM__c</fullName>
        <label>AM/PM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                    <default>true</default>
                    <label>AM</label>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Amount__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advpm__Duration__c</fullName>
        <label>Duration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Matter__c</fullName>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Histories</relationshipLabel>
        <relationshipName>Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>advpm__Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>advpm__Participant__c.advpm__Matter__c</field>
                <operation>equals</operation>
                <valueField>$Source.advpm__Matter__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>advpm__Participant__c</referenceTo>
        <relationshipLabel>Histories</relationshipLabel>
        <relationshipName>Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Contested</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Time__c</fullName>
        <label>Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hospitalization</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Injury</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>History</label>
    <nameField>
        <label>Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Histories</pluralLabel>
    <recordTypes>
        <fullName>advpm__General</fullName>
        <active>true</active>
        <label>General</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>